# gpt-convo-reader

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
data/: conversations-orig.json  conversations.json
src/converter/: __init__.py  boring_tasks.md  config.py  convert.ini  convert.py  gui.py  message.py
test/test/gpt_convo_reader/: test_converter.py
test/test/gpt_convo_reader/integration/: test_config.py
