[metadata]
name = gpt-convo-reader
version = 0.1
author = Romilly Cocking
author_email = romilly.cocking@gmail.com
description = Lets you find, view and format the conversations you've had with ChatGPT in the playground.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romilly/gpt-convo-reader
project_urls =
    Bug Tracker = https://github.com/romilly/gpt-convo-reader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    guizero >= 1.4.0

[options.entry_points]
console_scripts =
    reader_gui = converter:converter

[options.packages.find]
where = src